--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,3 +10,11 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 88
+
+
+[tool.autoflake]
+check_diff = true
+remove-all-unused-imports = true
+remove-unused-variables = true
+in-place = true
+expand-star-imports = true
