--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 amqp==5.2.0
 asgiref==3.8.1
 asttokens==2.4.1
+attrs==24.1.0
+autoflake==2.3.1
 billiard==4.2.0
 black==24.4.2
 celery==5.4.0
@@ -15,10 +17,15 @@ django-cors-headers==4.4.0
 django-extensions==3.2.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
 executing==2.0.1
 flake8==7.1.0
+inflection==0.5.1
 ipython==8.26.0
+isort==5.13.2
 jedi==0.19.1
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 kombu==5.3.7
 matplotlib-inline==0.1.7
 mccabe==0.7.0
@@ -37,11 +44,16 @@ pyflakes==3.2.0
 Pygments==2.18.0
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+PyYAML==6.0.1
 redis==5.0.8
+referencing==0.35.1
+rpds-py==0.19.1
 six==1.16.0
 sqlparse==0.5.1
 stack-data==0.6.3
 traitlets==5.14.3
 tzdata==2024.1
+uritemplate==4.1.1
 vine==5.1.0
 wcwidth==0.2.13
