--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.7.3",
+    "gsap": "^3.12.5",
     "pinia": "^2.1.7",
     "swiper": "^11.1.9",
     "vue": "^3.4.29",
