--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.4",
     "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.7.3",
     "gsap": "^3.12.5",
     "pinia": "^2.1.7",
+    "primevue": "^4.0.4",
     "swiper": "^11.1.9",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
