--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@primevue/themes": "^4.0.4",
     "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.7.3",
+    "flowbite": "^2.5.1",
+    "flowbite-vue": "^0.1.6",
     "gsap": "^3.12.5",
     "pinia": "^2.1.7",
     "primevue": "^4.0.4",
