--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "sass": "^1.83.4",
     "tailwindcss": "^3.4.7",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
